--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": ["apexcharts", "bezier-easing"],
-            "outputPath": "dist/",
+            "outputPath": "dist/issp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
